Mon Sep 22 15:37:03 2003  George Lebl <jirka@5z.com>

	* Release 2.4.4.2

Mon Sep 22 15:35:23 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/misc.[ch]: add a func to get a specific
	  stored env var.  Check in the stored PATH for TryExec and
	  only check TryExec when finding a session when nothing else
	  is given.  The greeters really take care of TryExec.

Mon Sep 22 15:19:21 2003  George Lebl <jirka@5z.com>

	* config/gnome.desktop.in: add TryExec=gnome-session

Mon Sep 22 15:16:05 2003  George Lebl <jirka@5z.com>

	* config/Makefile.am: in the old location where we're not replacing
	  the files, move them rather then just copy them to avoid duplicate
	  copies.  Also just append the .orig extension, we handle that
	  now

	* gui/gdmlogin.c, gui/greeter/greeter_session.c: Fix the extension
	  handling checking and default.desktop.rpmorig and such won't be
	  treated as .desktop files anymore

Mon Sep 22 15:01:41 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.h, config/gdm.conf.in: use $datadir/xsessions instead of
	  hardcoding /usr/share/xsessions

	* config/Makefile.am: install gnome.desktop and CDE.desktop into the
	  datadir location as they're not config and this way we share them
	  with KDM, yay.  They should be installed by respective owner
	  packages at some point though ...

	* docs/C/gdm.xml: update a bit.

Mon Sep 22 13:55:50 2003  George Lebl <jirka@5z.com>

	* gui/modules/dwellmouselistener.c: fix error handling / leaks

	* gui/modules/keymouselistener.c: fix error handling and leaks,
	  fix the stupid and annoying as hell "turn of key-repeat" hack,
	  fix using modifier keys as the gestures themselves (#122944)

	* gui/modules/AccessKeyMouseEvents.in: fix documentation a bit

	* daemon/errorgui.c: listen to all events on the dialogs to
	  make the accessibility gestures work

Mon Sep 22 12:25:44 2003  George Lebl <jirka@5z.com>

	* daemon/errorgui.c: reenable the gtk modules stuff, it wasn't