@@ -70,7 +70,7 @@ esac
 if [ "x$XNESTSIZE" = x ] ; then
   eval `gdmXnest -b -o "-terminate"`
 else
-  eval `gdmXnest -b -o "-geometry $XNESTSIZE -terminate""`
+  eval `gdmXnest -b -o "-geometry $XNESTSIZE -terminate"`
 fi
 eval `gdmXnest -b`
 export DISPLAY
