@@ -1,3 +1,12 @@
+Tue Sep 23 10:16:08 2003  George Lebl <jirka@5z.com>
+
+	* gui/greeter/gdmthemetester: fix shell parse error
+
+	* gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_parser.c:
+	  parse and use font and color info for the entry types.  The
+	  documentation is unclear but would sort of imply this is 
+	  possible.  Plus it is good for making large font themes.
+
 Mon Sep 22 15:37:03 2003  George Lebl <jirka@5z.com>
 
 	* Release 2.4.4.2
